src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fis-rest-1
  labels:
    app: safaricom-fis-1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: safaricom-fis-1
  type: ClusterIP
