src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: fis-rest-1
  labels:
    app: safaricom-fis-1
spec:
  to:
    kind: Service
    name: fis-rest-1
